# rdf2hdt

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test_build.yml
benches/: benchmark.rs
scripts/: download-sample-bench.sh
src/: bitmap_triples.rs  builder.rs  common.rs  convert.rs  dictionary.rs  hdt.rs  lib.rs  log_sequence.rs  main.rs  rdf_reader.rs  vocab.rs
tests/resources/: apple.hdt
