[package]
name = "rdf2hdt"
version = "0.1.1"
authors = ["Greg Hanson <g.isaac.hanson@gmail.com>"]
edition = "2024"
license = "BSD-3-Clause"
description = "Library for converting a RDF data to HDT"
repository = "https://github.com/DeciSym/rdf2hdt"
readme = "README.md"
keywords = ["hdt", "rdf", "semantic-web", "converter", "parser"]
categories = ["command-line-utilities", "encoding", "parser-implementations", "science", "web-programming"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive","cargo"] }
clap-verbosity-flag = "3.0"
crc = "3.2.1"
env_logger = "0.11"
hdt = { git = "https://github.com/KonradHoeffner/hdt/" }
log = "0.4"
oxrdf = "0.2"
oxrdfio = "0.1"
tempfile = "3.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"]}
pprof = { version = "0.15", features = ["protobuf", "protobuf-codec", "criterion"] }
walkdir = "2.5"

[package.metadata.cargo-machete]
ignored = ["iref", "langtag"]
