[package]
name = "rdf2hdt"
version = "0.3.0"
authors = ["Greg Hanson <g.isaac.hanson@gmail.com>"]
edition = "2024"
license = "BSD-3-Clause"
description = "Library for converting a RDF data to HDT"
repository = "https://github.com/DeciSym/rdf2hdt"
readme = "README.md"
keywords = ["hdt", "rdf", "semantic-web", "converter", "parser"]
categories = ["command-line-utilities", "encoding", "parser-implementations", "science", "web-programming"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]
clap = { version = "4.5", features = ["derive","cargo"] }
clap-verbosity-flag = "3.0"
env_logger = "0.11"
hdt = { git = "https://github.com/KonradHoeffner/hdt/", default-features = false, features = ["nt"], tag = "0.5.0" } # waiting for 0.5.0 release
log = "0.4"
oxrdf = "0.3"
oxrdfio = "0.2"
tempfile = "3.23"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"]}
pprof = { version = "0.15", features = ["protobuf", "protobuf-codec", "criterion"] }
walkdir = "2.5"

[package.metadata.cargo-machete]
ignored = ["iref", "langtag"]
